refactor: rename id_store to store_id and update related routes and database schema; comment out cron job executions
