# src/controllers/storeController.ts
@@ -1,3 +1,4 @@
+import { response } from "express";
 // controllers/userController.ts
 import { Request, Response } from "express";
 import { StoreService } from "../services/storeService";
@@ -5,8 +6,8 @@ import { StoreService } from "../services/storeService";
 export class storeController {
   static async getInfoStore(req: Request, res: Response) {
     try {
-      const { id_store } = req.body;
-      const store = await StoreService.getInfoStoreService({ id_store });
+      const { store_id } = req.body;
+      const store = await StoreService.getInfoStoreService({ store_id });
       res.status(200).json(store);
     } catch (err: any) {
       res.status(500).json({ message: err.message });
@@ -20,27 +21,28 @@ export class storeController {
       const products = await StoreService.getNewProductsStore({
         configs: configs,
       });
+
       res.status(200).json(products);
     } catch (err: any) {
       res.status(500).json({ message: err.message });
     }
   }
 
-  static async registerAllProductsDay(req?: any, res?: any) {
-    try {
-      const allProducts = await StoreService.getAllProductsDay();
-      res.status(200).json({ success: true });
-    } catch (err: any) {
-      res.status(500).json({ message: err.message });
-    }
-  }
+  // static async registerAllProductsDay(req?: any, res?: any) {
+  //   try {
+  //     const allProducts = await StoreService.getAllProductsDay();
+  //     res.status(200).json({ success: true });
+  //   } catch (err: any) {
+  //     res.status(500).json({ message: err.message });
+  //   }
+  // }
 
   static async getAllProductsDayByIdStore(req: Request, res: Response) {
-    const { id_store } = req.body;
+    const { store_id } = req.body;
 
     try {
       const products = await StoreService.getAllProductsDayByIdStore({
-        id_store: id_store,
+        store_id: store_id,
       });
       res.status(200).json(products);
     } catch (err: any) {
@@ -48,15 +50,29 @@ export class storeController {
     }
   }
 
-  static async getAllStoreProductOffers(req: Request, res: Response) {
+  static async getAllStoreProductOffers(
+    req: Request,
+    res: Response
+  ): Promise<void | any> {
     const configs = req.body;
 
     try {
       const products = await StoreService.getAllStoreProductOffers({
         configs: configs,
+        onlyRead: false,
         firstRequestDay: false,
       });
-      res.status(200).json(products);
+
+      if (products.status === 204) {
+        const response = {
+          status: 204,
+          message: "está lojá não existe na base de dados da rappi",
+        };
+
+        return res.status(404).json(response);
+      }
+
+      return res.status(200).json(products);
     } catch (err: any) {
       res.status(500).json({ message: err.message });
     }
@@ -93,14 +109,52 @@ export class storeController {
     }
   }
 
-  static async addStores(req: Request, res: Response) {
+  static async searchLocations(req: Request, res: Response) {
+    const { query } = req.body;
+
     try {
-      const markets = await StoreService.addStores();
-      res
-        .status(200)
-        .json({ message: "Markets added successfully", data: markets });
+      const locations = await StoreService.searchLocations({ query: query });
+      res.status(200).json(locations);
     } catch (err: any) {
       res.status(500).json({ message: err.message });
     }
   }
+
+  static async getGeolocation(req: Request, res: Response) {
+    const { place_id } = req.body;
+
+    try {
+      const geolocation = await StoreService.getGeolocation({
+        place_id: place_id,
+      });
+      res.status(200).json(geolocation);
+    } catch (err: any) {
+      res.status(500).json({ message: err.message });
+    }
+  }
+
+  static async getStoresByLocation(req: Request, res: Response) {
+    const { lat, lng } = req.body;
+
+    try {
+      const store_by_location = await StoreService.getStoresByLocation({
+        lat: lat,
+        lng: lng,
+      });
+      res.status(200).json(store_by_location);
+    } catch (err: any) {
+      res.status(500).json({ message: err.message });
+    }
+  }
+
+  // static async addStores(req: Request, res: Response) {
+  //   try {
+  //     const markets = await StoreService.addStores();
+  //     res
+  //       .status(200)
+  //       .json({ message: "Markets added successfully", data: markets });
+  //   } catch (err: any) {
+  //     res.status(500).json({ message: err.message });
+  //   }
+  // }
 }
